[workspace]
members = [
	"bin",
	"crates/kct_cli",
	"crates/kct_compiler",
	"crates/kct_helper",
	"crates/kct_jsonnet",
	"crates/kct_kube",
	"crates/kct_package",
	"crates/kct_testing"
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Bruno Felipe Leal Delfino <bruno.delfino1995@gmail.com>"]
repository = "https://github.com/bruno-delfino1995/kct"

[workspace.dependencies]
anyhow = "1.0.69"
assert_matches = "1.5.0"
async-trait = "0.1.64"
either = "1.8.1"
futures = "0.3.26"
kct_cli = { path = "./crates/kct_cli", version = "=0.7.0"}
kct_compiler = { path = "./crates/kct_compiler", version = "=0.7.0"}
kct_helper = { path = "./crates/kct_helper", version = "=0.7.0"}
kct_jsonnet = { path = "./crates/kct_jsonnet", version = "=0.7.0"}
kct_kube = { path = "./crates/kct_kube", version = "=0.7.0"}
kct_package = { path = "./crates/kct_package", version = "=0.7.0"}
kct_testing = { path = "./crates/kct_testing", version = "=0.7.0"}
serde_json = "1.0.94"
serde_yaml = "0.8"
tera = "1.17.1"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
valico = "3.6.1"

[profile.release]
strip = "debuginfo"
