[package]
name = "compiler"
version = "0.1.0"
authors = ["Bruno Felipe Leal Delfino <bruno.delfino1995@gmail.com>"]
edition = "2018"

[dependencies]
flate2 = "1.0.17"
helper = { path = "../helper" }
jrsonnet-evaluator = "0.3.1"
serde = "1.0.115"
serde_json = "1.0"
tar = "0.4.30"
tempfile = "3.1.0"
url = "2.1.1"
valico = "3.4.0"
