[package]
name = "kct"
version = "0.1.0"
edition = "2018"
authors = ["Bruno Felipe Leal Delfino <bruno.delfino1995@gmail.com>"]
description = "Kubernetes Configuration Tool"
repository = "https://github.com/bruno-delfino1995/kct"
license = "MIT"
keywords = ["kubernetes", "jsonnet"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.3"
compiler = { path = "../compiler" }
helper = { path = "../helper" }
serde = "1.0.115"
serde_json = "1.0"
