[package]
name = "kct_cli"
description = "KCP CLI interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
kct_helper.workspace = true
serde_json.workspace = true
thiserror.workspace = true
