[package]
name = "kct_compiler"
description = "KCP Compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
jrsonnet-gcmodule.workspace = true
kct_jsonnet.workspace = true
serde_json.workspace = true
thiserror.workspace = true
