[package]
name = "kct_helper"
version = "0.3.1"
authors = ["Bruno Felipe Leal Delfino <bruno.delfino1995@gmail.com>"]
description = "Utilities used by KCT components"
repository = "https://github.com/bruno-delfino1995/kct"
edition = "2021"
license = "MIT"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
