[package]
name = "kct_helper"
description = "Utilities used by KCT components"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
