[package]
name = "kct_jsonnet"
description = "KCP wrapper around jrsonnet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
jrsonnet-evaluator = "0.5.0-pre6"
jrsonnet-gcmodule = "0.3.3"
jrsonnet-interner = "0.5.0-pre9"
jrsonnet-parser = "0.5.0-pre6"
jrsonnet-stdlib = "0.5.0-pre6"

anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
