[package]
name = "kct_kube"
version = "0.3.1"
authors = ["Bruno Felipe Leal Delfino <bruno.delfino1995@gmail.com>"]
description = "K8s object finder"
repository = "https://github.com/bruno-delfino1995/kct"
edition = "2021"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
serde = "1.0.115"
serde_json = "1.0"
thiserror = "1.0"
valico = "3.4.0"
