[package]
name = "kct_kube"
description = "K8s object finder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"

anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
valico.workspace = true

[dev-dependencies]
assert_matches.workspace = true
kct_testing.workspace = true
