[package]
name = "kct_kube"
description = "K8s object finder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
once_cell = "1.18.0"
regex = "1.9.1"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
kube = { version = "0.81.0", features = ["runtime", "derive"] }
openssl = { version = "0.10.55", features = ["vendored"] }

anyhow.workspace = true
async-trait.workspace = true
either.workspace = true
futures.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
valico.workspace = true

[dev-dependencies]
assert_matches.workspace = true
kct_testing.workspace = true
