[package]
name = "kct_package"
version = "0.5.0"
authors = ["Bruno Felipe Leal Delfino <bruno.delfino1995@gmail.com>"]
description = "KCP compiler"
repository = "https://github.com/bruno-delfino1995/kct"
edition = "2021"
license = "MIT"

[dependencies]
flate2 = "1.0.17"
globwalk = "0.8.0"
jrsonnet-evaluator = "0.4.2"
jrsonnet-gc = "0.4.2"
jrsonnet-interner = "0.4.2"
jrsonnet-parser = "0.4.2"
kct_helper = { path = "../kct_helper", version = "^0.5.0"}
rustc-hash = "1.1.0"
semver = "0.9.0"
serde = "1.0.115"
serde_json = "1.0"
tar = "0.4.30"
tera = "1"
thiserror = "1.0"
url = "2.1.1"
valico = "3.4.0"

[dev-dependencies]
kct_testing = { path = "../kct_testing", version = "^0.5.0"}
