[package]
name = "kct_package"
description = "KCT package"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
globwalk = "0.8.0"
semver = "0.9.0"
serde = "1.0.115"
serde_json = "1.0"
tera = "1"
thiserror = "1.0"
url = "2.1.1"
valico = "3.4.0"

kct_helper.workspace = true
kct_compiler.workspace = true

[dev-dependencies]
kct_testing.workspace = true
