[package]
name = "kct_package"
description = "KCT package"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
globwalk = "0.8.0"
semver = "1.0.17"
url = "2.4.0"

anyhow.workspace = true
jrsonnet-gcmodule.workspace = true
kct_compiler.workspace = true
kct_helper.workspace = true
serde_json.workspace = true
tera.workspace = true
thiserror.workspace = true
valico.workspace = true

[dev-dependencies]
assert_matches.workspace = true
kct_testing.workspace = true
