[package]
name = "kct_testing"
description = "KCT testing utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fs_extra = "1.2.0"
serde = "1.0.115"
serde_json = "1.0"
tempfile = "3.1.0"
tera = "1"

kct_package.workspace = true
