[package]
name = "kct_testing"
description = "KCT testing utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
fs_extra = "1.2.0"
tempfile = "3.1.0"

kct_package.workspace = true
serde_json.workspace = true
tera.workspace = true
